# Fake_pacman

./: :w  CMakeLists.txt  README.md  main.cpp  maze_builder.py  run.sh  sfml-app
helpers/: ghost_mov.h  make_map.h  moving_obj.h  pathFinding.h  textures.h
include/: Coin.hpp  GUI.hpp  Game.hpp  GameStates.h  Ghost.hpp  MovingObject.hpp  Settings.h  ghost_mov.hpp  helpers.h  make_entities.h  pathFinding.h  textures.h
mazes/: maze1.map  maze2.map  maze9.map  mazeList.txt
src/: Coin.cpp  GUI.cpp  Game.cpp  Ghost.cpp  MovingObject.cpp  Settings.cpp  ghost_mov.cpp  helpers.cpp  main.cpp  make_entities.cpp  pathFinding.cpp  textures.cpp
